# ChromeMate

./: .gitignore  AGENTS.md  README.md  plan.md  pyproject.toml
completions/: chromemate.bash  chromemate.zsh
src/chromemate/: __init__.py  cli.py  exporter.py  history_merger.py  profile.py  report.py
src/chromemate/analyzers/: __init__.py  bookmarks.py  extensions.py  history.py  utils.py
tests/: __init__.py  conftest.py  test_bookmarks.py  test_exporter.py  test_extensions.py  test_history.py  test_history_merger.py  test_profile.py
